# ironclaw

./: .gitignore  Cargo.toml  FEATURE_PARITY.md  README.md
src/: config.rs  main.rs
src/agent/: agent_loop.rs  compaction.rs  session.rs  session_manager.rs  submission.rs
src/channels/: mod.rs
src/channels/web/: mod.rs  server.rs  ws.rs
src/cli/: mcp.rs  memory.rs  tool.rs
src/extensions/: manager.rs
src/history/: mod.rs  postgres.rs  sqlite.rs  store.rs
src/llm/: mod.rs  openai_compatible.rs
src/secrets/: mod.rs  store.rs
src/setup/: channels.rs  wizard.rs
src/tools/: mod.rs  registry.rs
src/tools/builder/: mod.rs  validation.rs
src/workspace/: mod.rs  repo_backend.rs  repository.rs  sqlite_repo.rs
tests/: store_sqlite_integration.rs  ws_gateway_integration.rs
