[package]
name = "ironclaw"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Secure personal AI assistant that protects your data and expands its capabilities on the fly"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
# SQLite backend (mobile / embedded)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "db-tokio-postgres", "maths"] }
rust_decimal_macros = "1"

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.28"
rustyline = { version = "17", features = ["derive", "with-file-history"] }
termimad = "0.34"

# Channel integrations
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Safety/sanitization
regex = "1"
aho-corasick = "1"

# Filesystem paths
dirs = "6"

# Secrecy for sensitive values
secrecy = { version = "0.10", features = ["serde"] }

# URL encoding for OAuth flow
urlencoding = "2"

# Open URLs in browser
open = "5"

# Vector embeddings for semantic search
# The postgres feature provides ToSql/FromSql for postgres-types (shared by tokio-postgres)
pgvector = { version = "0.4", features = ["postgres"] }

# WASM sandbox for untrusted tool execution (optional; disable for iOS/mobile)
wasmtime = { version = "28", features = ["component-model"], optional = true }
wasmtime-wasi = { version = "28", optional = true }
wasmparser = { version = "0.220", optional = true }

# Cryptography for secrets management
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"

# Docker sandbox
bollard = "0.18"

# HTTP proxy for sandboxed network access
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22.1"

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Linux secret-service (GNOME Keyring, KWallet)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
zbus = "4"

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.26"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
pretty_assertions = "1"
tempfile = "3"

[features]
default = ["wasm"]
# WASM tools and WASM channels (wasmtime); disable for iOS/mobile to avoid wasmtime-fiber AArch64 issues
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasmparser"]
integration = []
# Expose DatabaseConfig::for_test for integration tests (e.g. store_sqlite_integration)
test-utils = []
